# n8n-binance-nodes

./: .gitignore  AGENTS.md  CHANGELOG.md  README-MarkdownSaver.md  README.md  docker-compose.yml  env-example  opencode.json  package.json  policy.yaml
api/: PYDANTIC_IMPLEMENTATION.md  README.md  TODO.md  demo_indicators.py  demo_pydantic.py  pyproject.toml  requirements.txt  sol_analysis_example.py  sol_macd_tool.py  sol_macd_usage.py  sol_response_example.json
api/migrations/: 001_news_tables.sql  002_trading_tables.sql
api/src/: main.py
api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/src/config/: __init__.py  logging_config.py
api/src/middleware/: __init__.py  logging_middleware.py
api/src/models/: __init__.py  api_models.py  indicators.py  ingest_models.py  news_models.py  settings.py  trading_models.py
api/src/routes/: binance.py  indicators.py  ingest.py  news.py  trading.py
api/src/scheduler/: __init__.py  news_scheduler.py
api/src/services/: __init__.py  candlestick_sync.py  coin_detector.py  database.py  failover_manager.py  news_service.py  rss_fetcher.py  sentiment_analyzer.py  trading_service.py
api/src/utils/: binance.py  binance_client.py  crypto_utils.py  date_utils.py  exceptions.py  indicators.py  price_validation.py
api/tests/: README.md  test_binance_api.py  test_binance_order.py  test_ingest.py  test_price_validation.py  test_technical_indicators.py
config/: n8n-task-runners.json
data/: ETHUSDT-202602251000-GEMINI.md  ETHUSDT-202602251000-GLM.md  README.md
dockers/: Dockerfile  Dockerfile.n8n  Dockerfile.postgres  Dockerfile.python  Dockerfile.runners
dockers/task-runner-python/: pyproject.toml
docs/: EMA-strategy-configuration.md  TODO-EMA-indicator.md  TODO-add-ingest-data.md  TODO-binance-futures-proxy.md  TODO-binance-order-node.md  TODO-build-analyse-f.md  TODO_implementation_plan_binance_kline_indicators_node.md  binance-api.md  day-trader-expert.md  n8n-custom-node-kimi.md  n8n-custom-node.md  news-analyst.md  organize-workflows.md  stock-analyst.md  technical-instruction.md  update-n8n-ses_3630.md
(+62 files in other folders)
