[project]
name = "api"
version = "0.1.0"
description = "API for n8n"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.27.0",
    "pytest-cov>=4.0.0",
]
