[project]
name = "task-runner-python"
version = "0.1.0"
description = "Native Python task runner for n8n"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4==4.14.3",
  "bs4==0.0.2",
  "certifi==2025.11.12",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "datetime==6.0",
  "feedparser==6.0.12",
  "filelock==3.20.0",
  "fsspec==2025.10.0",
  "hf-xet==1.2.0",
  "huggingface-hub==0.36.0",
  "idna==3.11",
  "jinja2==3.1.6",
  "joblib==1.5.2",
  "markupsafe==3.0.2",
  "mpmath==1.3.0",
  "networkx==3.5",
  "nltk==3.9.2",
  "numpy==2.3.5",
  "packaging==25.0",
  "pytz==2025.2",
  "pyyaml==6.0.3",
  "quote>=3.0",
  "regex==2025.11.3",
  "requests==2.32.5",
  "safetensors==0.7.0",
  "setuptools==70.2.0",
  "sgmllib3k==1.0.0",
  "soupsieve==2.8",
  "sympy==1.14.0",
  "textblob==0.19.0",
  "tokenizers==0.22.1",
  "tqdm==4.67.1",
  "transformers==4.57.3",
  "typing-extensions==4.15.0",
  "urllib3==2.5.0",
  "vadersentiment==3.3.2",
  "websockets>=15.0.1",
  "zope-interface==8.1.1",
]

[dependency-groups]
dev = [
  "ruff>=0.12.8",
  "ty>=0.0.1a17",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.24.0",
  "aiohttp>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[project.optional-dependencies]
sentry = ["sentry-sdk>=2.35.2"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
